assets/main.scss
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  font: 100%/1.6 'Lora', serif;
  font-weight: 400;
  padding: 1em 0.5em;
  text-align: left;
  font-kerning: normal;
}

p {
  font-size: 1.2em;
  line-height: 1.4;
}

// p + p {
//   text-indent: 1em;
// }
a {
  text-decoration: none;
  color: #35468d;
  &:hover {
    color: #da795c;
  }
}

// modular scale
h1 {
  font-size: 2.488em;
}

h2 {
  font-size: 2.074em;
  line-height: 1.4;
  margin: 0.5em 0;
}

h3 {
  font-size: 1.728em;
  margin: 0.25em 0;
  line-height: 1.4;
}

h4 {
  font-size: 1.44em;
  margin: 0.25em 0;

  line-height: 1.4;
}

h5 {
  font-size: 1.2em;
  margin: 0.25em 0;
}

h6 {
  font-size: 1em;
  margin: 0.25em 0;
}

h1 {
  letter-spacing: 0.1em;
}

span {
  font-variant-numeric: oldstyle-nums;
}

// ul {
//   margin: 0;
//   padding: 0;
// }

li li {
  margin-right: 1em;
}

.btn {
  padding: 0.5em;
  text-align: center;
  cursor: pointer;
  border: 1px solid #262427;
  transition: all 0.5s;
  &:hover {
    background: #262427;
    color: #fff;
  }
}

.btn--full-width {
  width: 100%;
}

.page-enter-active,
.page-leave-active {
  transition: opacity 0.5s;
}
.page-enter,
.page-leave-to {
  opacity: 0;
}
@media print {
  .site-header,
  .wiget-area,
  .site-footer,
  .icon-printer,
  .icons {
    display: none;
  }
}

